[package]
name = "kvs_project"
authors = ["Zarrko zarrko@"]
version = "0.1.0"
description = "A persistent key-value store"
edition = "2021"

[dependencies]
clap = "2.32.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
